--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+asgiref==3.10.0
+dj-database-url==3.0.1
 Django==5.2.7
-gunicorn==21.2.0
-whitenoise==6.6.0
-psycopg2-binary==2.9.9
+gunicorn==23.0.0
+packaging==25.0
+pillow==11.3.0
+psycopg2-binary==2.9.11
 python-decouple==3.8
-dj-database-url==2.1.0
+sqlparse==0.5.3
+tzdata==2025.2
+whitenoise==6.11.0
